collapsing height fix

--- a/app/assets/stylesheets/components/snackratings.scss
+++ b/app/assets/stylesheets/components/snackratings.scss
@@ -12,6 +12,7 @@
 
 .show-ratings-index {
   min-width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -19,7 +20,9 @@
 
 .snack-rating-index-item {
   width: 29.333%;
-  height: 160px;
+  // height: 160px;
+  height: 25%;
+  padding: 10px;
   margin: 2%;
   display: flex;
   justify-content: center;
@@ -37,8 +40,9 @@
 
 .snack-rating-index-rater {
   width: 50%;
-  height: 140px;
-  margin: 10px;
+  // height: 140px;
+  height: 100%;
+  // margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,8 +75,8 @@
 
 .snack-rating-index-rating {
   width: 50%;
-  height: 140px;
-  margin: 10px;
+  // height: 140px;
+  // margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
