--- a/app/assets/stylesheets/components/snackshow.scss
+++ b/app/assets/stylesheets/components/snackshow.scss
@@ -33,7 +33,7 @@
 
 .show-index-title-item {
   width: 65%;
-  height: 15%;
+  height: 25%;
   margin-right: 1%;
   margin-left: 9%;
   margin-top: 2%;
@@ -148,7 +148,7 @@
 
 .show-index-avgrating-item {
   width: 15%;
-  height: 15%;
+  height: 25%;
   border-radius: 5px;
   background-color: #f2f2f2;
   margin-top: 2%;
